apps/postgres-frontend-syncwave/02-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres-frontend-demo
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
